Upgrade netty, maven plugins, commons-lang, joda